--- a/src/app/design/organisms/filter-list/filter-list.component.html
+++ b/src/app/design/organisms/filter-list/filter-list.component.html
@@ -8,7 +8,7 @@
     role="search"
   >
     <label class="fs-5 fw-bold p-0" [for]="searchId">
-      Search for article
+      Search for {{ heading() }}
     </label>
     <div class="filter__input-container">
       <input
