--- a/src/app/design/organisms/icon-card-list/icon-card-list.component.html
+++ b/src/app/design/organisms/icon-card-list/icon-card-list.component.html
@@ -9,7 +9,7 @@
   (keydown.control.Home)="focusArticle(0)"
 >
   @for (article of articles(); track $index) {
-    @let articleId = id + "-article-" + $index;
+    @let articleId = id() + "-article-" + $index;
     <article
       (focusin)="focusedIndex.set($index)"
       class="entry col-6 col-lg-4 col-xl-3"
