--- a/src/app/design/organisms/icon-card-list/icon-card-list.component.html
+++ b/src/app/design/organisms/icon-card-list/icon-card-list.component.html
@@ -10,10 +10,11 @@
 >
   @for (article of articles(); track $index) {
     @let articleId = id() + "-article-" + $index;
+    <!-- aria-posinset starts at 1 -->
     <article
       (focusin)="focusedIndex.set($index)"
       class="entry col-6 col-lg-4 col-xl-3"
-      [attr.aria-posinset]="$index"
+      [attr.aria-posinset]="$index + 1"
       [attr.aria-setsize]="-1"
       [attr.aria-labelledby]="articleId"
     >
