--- a/src/app/design/organisms/encounter/encounter.component.html
+++ b/src/app/design/organisms/encounter/encounter.component.html
@@ -1,5 +1,5 @@
 @if (encounter() || cardState() === "CREATE") {
-  <header aria-level="4" class="card__heading">
+  <header class="card__heading">
     <h4 class="mb-0">
       @switch (cardState()) {
         @case ("DISPLAY") {
