--- a/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
+++ b/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
@@ -1,81 +1,81 @@
 <div class="container list" [class.list--loading]="isUpdatingGlobally()">
   @if (!isUpdatingGlobally()) {
     <!-- Diaryentry - Encounters -->
-    <ul class="list__inner p-0" aria-label="Diaryentry Encounters">
-      @if (state() === "EDIT" && (canCreate() || canUpdate())) {
-        @if (canCreate()) {
-          <div class="list__button-container">
-            <button
-              btn
-              class="list__button list__button--first"
-              title="Add Encounter to Diaryentry"
-              [kind]="'PRIMARY'"
-              [size]="'LARGE'"
-              [icon]="'plus'"
-              [text]="'Add First Encounter'"
-              [disabled]="isUpdatingAnything()"
-              [isLoading]="isUpdatingAnything()"
-              (clicked)="addEmptyEncounterAtIndex(-1)"
-            ></button>
-          </div>
-        }
-      }
-
+    <ul class="list__inner" aria-label="Diaryentry Encounters">
       @for (
         entryEncounter of diaryEntryEncounters();
         track entryEncounter.encounter.title
       ) {
-        @let disabled =
-          isUpdatingAnything() || entryEncounter.requestState === "loading";
-
-        <app-encounter-card
-          #encounter
-          class="list__encounter"
-          [id]="entryEncounter.encounter.title"
-          [attr.tabindex]="state() === 'EDIT' ? 0 : null"
-          role="listitem"
-          [encounter]="entryEncounter.encounter"
-          [characters]="campaignCharacters() ?? []"
-          [locations]="campaignLocations() ?? []"
-          [serverModel]="encounterServerModel()"
-          [canUpdate]="canUpdate()"
-          [canDelete]="canDelete()"
-          [canCreate]="canCreate()"
-          [disabled]="disabled"
-          [updateState]="entryEncounter.requestState"
-          [state]="state()"
-          [isInFocus]="encounterIndexInFocus() === $index"
-          [ariaLevel]="2"
-          (connectionDelete)="connectionDelete.emit($event)"
-          (connectionCreate)="connectionCreate.emit($event)"
-          (encounterDelete)="onEncounterDelete($index)"
-          (encounterUpdate)="encounterUpdate.emit($event)"
-          (encounterCreate)="onEncounterCreate($event)"
-          (encounterCreateCancel)="onEncounterCreateCancel($index)"
-          (focusin)="setEncounterFocusIndex($index)"
-          (focus)="setEncounterFocusIndex($index)"
-          (blur)="setEncounterFocusIndex(undefined)"
-        ></app-encounter-card>
-
-        <!-- Insert new Encounter -->
-        @if (state() === "EDIT" && (canCreate() || canUpdate())) {
-          <div class="list__button-container">
+        <li>
+          @if ($first && state() === "EDIT" && (canCreate() || canUpdate())) {
             @if (canCreate()) {
-              <button
-                btn
-                class="list__button"
-                title="Add Encounter to DiaryEntry"
-                [kind]="'PRIMARY'"
-                [size]="'LARGE'"
-                [icon]="'plus'"
-                [text]="'Add Encounter'"
-                [disabled]="disabled"
-                [isLoading]="disabled"
-                (clicked)="addEmptyEncounterAtIndex($index)"
-              ></button>
+              <div class="list__button-container">
+                <button
+                  btn
+                  class="list__button list__button--first"
+                  title="Add Encounter to Diaryentry"
+                  [kind]="'PRIMARY'"
+                  [size]="'LARGE'"
+                  [icon]="'plus'"
+                  [text]="'Add First Encounter'"
+                  [disabled]="isUpdatingAnything()"
+                  [isLoading]="isUpdatingAnything()"
+                  (clicked)="addEmptyEncounterAtIndex(-1)"
+                ></button>
+              </div>
             }
-          </div>
-        }
+          }
+          @let disabled =
+            isUpdatingAnything() || entryEncounter.requestState === "loading";
+
+          <app-encounter-card
+            #encounter
+            class="list__encounter"
+            [id]="entryEncounter.encounter.title"
+            [attr.tabindex]="state() === 'EDIT' ? 0 : null"
+            [encounter]="entryEncounter.encounter"
+            [characters]="campaignCharacters() ?? []"
+            [locations]="campaignLocations() ?? []"
+            [serverModel]="encounterServerModel()"
+            [canUpdate]="canUpdate()"
+            [canDelete]="canDelete()"
+            [canCreate]="canCreate()"
+            [disabled]="disabled"
+            [updateState]="entryEncounter.requestState"
+            [state]="state()"
+            [isInFocus]="encounterIndexInFocus() === $index"
+            [ariaLevel]="2"
+            (connectionDelete)="connectionDelete.emit($event)"
+            (connectionCreate)="connectionCreate.emit($event)"
+            (encounterDelete)="onEncounterDelete($index)"
+            (encounterUpdate)="encounterUpdate.emit($event)"
+            (encounterCreate)="onEncounterCreate($event)"
+            (encounterCreateCancel)="onEncounterCreateCancel($index)"
+            (focusin)="setEncounterFocusIndex($index)"
+            (focus)="setEncounterFocusIndex($index)"
+            (blur)="setEncounterFocusIndex(undefined)"
+          ></app-encounter-card>
+
+          <!-- Insert new Encounter -->
+          @if (state() === "EDIT" && (canCreate() || canUpdate())) {
+            <div class="list__button-container">
+              @if (canCreate()) {
+                <button
+                  btn
+                  class="list__button"
+                  title="Add Encounter to DiaryEntry"
+                  [kind]="'PRIMARY'"
+                  [size]="'LARGE'"
+                  [icon]="'plus'"
+                  [text]="'Add Encounter'"
+                  [disabled]="disabled"
+                  [isLoading]="disabled"
+                  (clicked)="addEmptyEncounterAtIndex($index)"
+                ></button>
+              }
+            </div>
+          }
+        </li>
       }
     </ul>
   } @else {
