--- a/src/app/design/organisms/formly-datepicker-field/formly-datepicker-field.component.html
+++ b/src/app/design/organisms/formly-datepicker-field/formly-datepicker-field.component.html
@@ -28,6 +28,7 @@
       [icon]="'calendar'"
       [class.disabled]="!!props.disabled"
       (clicked)="datepickerInput.toggle()"
+      aria-label="Open calendar"
     >
       <app-icon [icon]="'calendar'"></app-icon>
     </button>
