--- a/src/app/design/organisms/spell/spell.component.html
+++ b/src/app/design/organisms/spell/spell.component.html
@@ -1,23 +1,21 @@
 @if (spell() || state() === "CREATE") {
   <div class="card__heading-container">
-    <h4 class="card__heading heading">
-      <span>
-        @switch (state()) {
-          @case ("DISPLAY") {
-            <ng-container [ngTemplateOutlet]="displayHeading" />
-          }
-          @case ("UPDATE") {
-            <ng-container [ngTemplateOutlet]="updateHeading" />
-          }
-          @case ("CREATE") {
-            <ng-container [ngTemplateOutlet]="createHeading" />
-          }
-          @case ("OUTDATED_UPDATE") {
-            <ng-container [ngTemplateOutlet]="updateHeading" />
-          }
+    <div class="h4 card__heading heading">
+      @switch (state()) {
+        @case ("DISPLAY") {
+          <ng-container [ngTemplateOutlet]="displayHeading" />
         }
-      </span>
-    </h4>
+        @case ("UPDATE") {
+          <ng-container [ngTemplateOutlet]="updateHeading" />
+        }
+        @case ("CREATE") {
+          <ng-container [ngTemplateOutlet]="createHeading" />
+        }
+        @case ("OUTDATED_UPDATE") {
+          <ng-container [ngTemplateOutlet]="updateHeading" />
+        }
+      }
+    </div>
     @if (canUpdate() || canCreate()) {
       <app-edit-toggle
         [buttonKind]="'DARK'"
