--- a/src/app/design/organisms/quest-table/quest-table.component.html
+++ b/src/app/design/organisms/quest-table/quest-table.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row heading">
     <!-- Outer Table Heading -->
-    <h5 class="col-sm-9 heading__text">{{ questTaker() }}'s Quests</h5>
+    <h2 aria class="h5 col-sm-9 heading__text">{{ questTaker() }}'s Quests</h2>
 
     <!-- Filterselect -->
     <label class="col-sm-3 d-flex align-items-center justify-content-end">
