--- a/src/app/design/organisms/quest-table/quest-table.component.html
+++ b/src/app/design/organisms/quest-table/quest-table.component.html
@@ -4,7 +4,18 @@
     <h2 aria class="h5 col-sm-9 heading__text">{{ questTaker() }}'s Quests</h2>
 
     <!-- Filterselect -->
-    <label class="col-sm-3 d-flex align-items-center justify-content-end">
+    <app-context-menu
+      class="col-sm-3 d-flex align-items-center justify-content-end"
+      [menuItems]="menuItems()"
+      [menuButtonText]="state()"
+      [menuButtonKind]="'DARK'"
+      [menuButtonIcon]="'filter'"
+      [menuButtonAriaLabel]="
+        'Filter quests of ' + questTaker() + ' by QuestState'
+      "
+      (actionTriggered)="updateDisplayState($event)"
+    />
+    <!-- <label class="col-sm-3 d-flex align-items-center justify-content-end">
       <select
         class="heading__select flex-1"
         [attr.aria-label]="
@@ -18,7 +29,7 @@
           </option>
         }
       </select>
-    </label>
+    </label> -->
   </div>
 
   <div class="row">
