--- a/src/app/design/organisms/quest-table/quest-table.component.scss
+++ b/src/app/design/organisms/quest-table/quest-table.component.scss
@@ -46,6 +46,7 @@
     }
 
     &--status {
+      vertical-align: middle;
       text-align: center;
       width: var(--spacer-0);
       padding-left: var(--spacer-1);
