--- a/src/app/design/organisms/sessionaudio-card/sessionaudio-card.component.html
+++ b/src/app/design/organisms/sessionaudio-card/sessionaudio-card.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <!-- Card Title -->
   <div class="card-header">
-    <h4 class="card-title">{{ sessionAudio().name }}</h4>
+    <div class="h4 card-title">{{ sessionAudio().name }}</div>
   </div>
 
   <!-- Card Body -->
