--- a/src/app/design/templates/general-overview/general-overview.component.html
+++ b/src/app/design/templates/general-overview/general-overview.component.html
@@ -106,7 +106,7 @@
   <h2 class="h3">
     Player Characters
 
-    <a bypass [id]="filterId">Skip to Search </a>
+    <a bypass [skipToId]="filterId">Skip to Search </a>
   </h2>
 
   <ul class="row" aria-label="All player characters">
