--- a/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.scss
+++ b/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.scss
@@ -15,6 +15,10 @@
     padding: 0;
   }
 
+  &__skip {
+    scroll-margin-top: var(--spacer-5);
+  }
+
   &__encounter {
     padding: unset;
     border-radius: var(--bs-border-radius);
