--- a/src/app/design/molecules/search-field/search-field.component.html
+++ b/src/app/design/molecules/search-field/search-field.component.html
@@ -1,9 +1,13 @@
 <div class="search" id="search-area">
   <form class="search__form" role="search" (submit)="startSearch()">
     <div
-      class="d-flex search__bar"
+      class="search__bar"
       [class.search__bar--disabled]="!canSearch()"
+      [class.search__bar--active]="searchInput.value"
     >
+      <label class="search__label" for="search">
+        {{ _placeholder() }}
+      </label>
       <input
         #searchInput
         class="search__input"
@@ -14,7 +18,6 @@
         id="search"
         [disabled]="!canSearch()"
         [(ngModel)]="searchString"
-        [placeholder]="_placeholder()"
         [hotkey]="'f'"
         (hotkeyPressed)="searchInput.focus()"
       />
