--- a/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.scss
+++ b/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.scss
@@ -32,6 +32,7 @@
   &__encounter {
     padding: unset;
     border-radius: var(--bs-border-radius);
+    width: 100%;
 
     &:focus-within,
     &:focus-visible {
