Tons of accessibility improvements

--- a/src/app/design/atoms/interactive-badge/interactive-badge.component.html
+++ b/src/app/design/atoms/interactive-badge/interactive-badge.component.html
@@ -50,7 +50,7 @@
         'bg-info': iconKindVal() === 'INFO',
         'bg-light': iconKindVal() === 'LIGHT',
       }"
-      [attr.aria-label]="'Remove item'"
+      [attr.aria-label]="'Remove ' + text()"
     >
       <app-icon [icon]="'trash'" />
     </button>
