--- a/src/app/design/organisms/encounter-accordion/encounter-accordion.component.html
+++ b/src/app/design/organisms/encounter-accordion/encounter-accordion.component.html
@@ -1,8 +1,9 @@
 <div class="encounter-list mb-5 mt-3">
   <div ngbAccordion [closeOthers]="true" [animation]="true">
     @for (encounter of encounters(); track encounter.pk) {
+      @let headingId = "encounter-heading-" + $index;
       <div ngbAccordionItem [id]="'static-' + $index">
-        <div ngbAccordionHeader [heading]="3">
+        <div ngbAccordionHeader [heading]="3" [id]="headingId">
           <button ngbAccordionButton class="panel-title">
             <strong
               class="encounter-title"
@@ -23,6 +24,7 @@
               [canDelete]="canDelete()"
               [canCreate]="canCreate()"
               [isInFocus]="false"
+              [headingId]="headingId"
               (connectionDelete)="connectionDelete.emit($event)"
               (connectionCreate)="connectionCreate.emit($event)"
               (encounterDelete)="encounterDelete.emit($event)"
