--- a/src/app/design/templates/general-overview/general-overview.component.html
+++ b/src/app/design/templates/general-overview/general-overview.component.html
@@ -65,7 +65,7 @@
       </div>
     }
 
-    <div>
+    <section [attr.aria-labelledby]="bodySectionId">
       @switch (overviewType()) {
         @case ("CHARACTER") {
           <ng-container [ngTemplateOutlet]="characterBody" />
@@ -77,7 +77,7 @@
           <ng-container [ngTemplateOutlet]="defaultBody" />
         }
       }
-    </div>
+    </section>
 
     <!-- Footer -->
     <div class="mt-4">
@@ -103,37 +103,38 @@
 </ng-template>
 
 <ng-template #characterHeading>
-  <h2 class="h3">
-    Player Characters
+  <section [attr.aria-labelledby]="headingSectionId">
+    <h2 class="h3" [id]="headingSectionId">Player Characters</h2>
 
-    <a bypass [skipToId]="filterId">Skip to Search </a>
-  </h2>
-
-  <ul class="row" aria-label="All player characters">
-    @for (playerCharacter of playerCharacters(); track playerCharacter.name) {
-      <li
-        class="col-xl-3 col-lg-4 col-md-6 col-sm-6 overview__player-card player-card"
-      >
-        <div class="player-card__link">
-          @if (playerCharacter.images) {
-            <app-image-card
-              class="player-card__card"
-              [serverUrl]="serverUrl()"
-              [fallbackUrl]="'/' + defaultPlayerCharacterImage"
-              [imageUrls]="playerCharacter.images"
-              [link]="playerCharacter.getAbsoluteRouterUrl()"
-              [alt]="'Player character' + playerCharacter.name"
-              [text]="playerCharacter.name_full"
-            ></app-image-card>
-          }
-        </div>
-      </li>
-    }
-  </ul>
+    <ul class="row" aria-label="All player characters">
+      @for (playerCharacter of playerCharacters(); track playerCharacter.name) {
+        <li
+          class="col-xl-3 col-lg-4 col-md-6 col-sm-6 overview__player-card player-card"
+        >
+          <div class="player-card__link">
+            @if (playerCharacter.images) {
+              <app-image-card
+                class="player-card__card"
+                [serverUrl]="serverUrl()"
+                [fallbackUrl]="'/' + defaultPlayerCharacterImage"
+                [imageUrls]="playerCharacter.images"
+                [link]="playerCharacter.getAbsoluteRouterUrl()"
+                [alt]="'Player character' + playerCharacter.name"
+                [text]="playerCharacter.name_full"
+              ></app-image-card>
+            }
+          </div>
+        </li>
+      }
+    </ul>
+  </section>
 </ng-template>
 
 <ng-template #characterBody>
-  <h2 class="h3">Non-Player Characters</h2>
+  <h2 class="h3" [id]="bodySectionId">
+    <span class="cdk-visually-hidden">Filterable list of </span>
+    Non-Player Characters
+  </h2>
 
   <app-filter-list
     [id]="filterId"
@@ -144,6 +145,10 @@
 </ng-template>
 
 <ng-template #diaryentryBody>
+  <h2 class="cdk-visually-hidden" [id]="bodySectionId">
+    Filterable list of Diaryentries
+  </h2>
+
   <app-filter-list
     [id]="filterId"
     [entries]="displayEntries()"
@@ -155,6 +160,10 @@
 </ng-template>
 
 <ng-template #defaultBody>
+  <h2 class="cdk-visually-hidden" [id]="bodySectionId">
+    Filterable list of {{ overviewTypeName() }}s
+  </h2>
+
   <app-filter-list
     [id]="filterId"
     [entries]="displayEntries()"
