--- a/src/app/design/templates/home/home.component.html
+++ b/src/app/design/templates/home/home.component.html
@@ -26,7 +26,7 @@
     <!-- Search Bar -->
     <app-search-field
       class="home__search-bar"
-      [placeholder]="'Search for Articles in this campaign!'"
+      [placeholder]="'Search for articles in ' + campaignData()?.name"
       [btnAriaLabel]="'Start search!'"
       [canSearch]="(isOnline$ | async) === true"
       (appSearch)="appSearch.emit($event)"
@@ -39,7 +39,7 @@
       <app-icon [icon]="'newspaper'"></app-icon>
       New Updates
     </h2>
-    <div class="home__feed feed">
+    <section class="home__feed feed" aria-label="New Updates Feed">
       <div class="feed__controls">
         @let infiniteScrollId = id + "-infinite-scroll";
         <label [for]="infiniteScrollId"> Infinity scroll </label>
@@ -49,7 +49,7 @@
           [kind]="'PRIMARY'"
           [active]="feedMode() === 'INFINITY_SCROLL'"
           [icon]="'infinity'"
-          [title]="'Infinity scroll for new updates feed'"
+          [ariaControls]="feedId"
           (changed)="toggleFeedMode($event)"
           (focusin)="isSwitchInFocus.set(true)"
           (focusout)="isSwitchInFocus.set(false)"
@@ -60,6 +60,7 @@
           [menuButtonKind]="'DARK'"
           [menuItems]="timeFilterOptions()"
           [menuButtonAriaLabel]="'Time filter options for update feed'"
+          [attr.aria-controls]="feedId"
           (actionTriggered)="timeFilter.set($any($event))"
         ></app-context-menu>
       </div>
@@ -88,7 +89,7 @@
           ></button>
         </div>
       }
-    </div>
+    </section>
 
     @if (isHotkeyModifierPressed()) {
       <button
