Migrate to switch

--- a/src/app/design/atoms/switch/switch.component.html
+++ b/src/app/design/atoms/switch/switch.component.html
@@ -6,8 +6,10 @@
   role="switch"
   [attr.disabled]="disabled()"
   [attr.checked]="checked() ? '' : null"
+  [attr.aria-controls]="ariaControls()"
   (input)="switch(switchInput.checked === true)"
 />
+
 <label class="form-check-label" [for]="id">
   {{ label() }}
 </label>
