--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@ html {
 
 body,
 .my-body {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Inter", "Source Sans Pro", sans-serif;
   overflow-x: hidden;
 }
 
@@ -29,13 +29,13 @@ p {
 }
 
 h1 {
-  text-transform: uppercase;
-  font-weight: bold !important;
+  text-transform: capitalize;
+  font-weight: bold;
 }
 
 h2 {
-  text-transform: uppercase;
-  font-weight: bold !important;
+  text-transform: capitalize;
+  font-weight: bold;
 }
 
 h3,
