Wrap up dealing with onboarding

--- a/src/app/global-components/onboarding/onboarding-modal/onboarding-modal.component.html
+++ b/src/app/global-components/onboarding/onboarding-modal/onboarding-modal.component.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
   <span> <!-- Spacer for display flex --> </span>
 
-  <div class="h4">{{ activeStepElement()?.label }}</div>
+  <div class="h4" [id]="modalTitle">{{ activeStepElement()?.label }}</div>
 
   <button
     btn
