--- a/src/app/global-components/onboarding/onboarding-stepper/onboarding-stepper.component.html
+++ b/src/app/global-components/onboarding/onboarding-stepper/onboarding-stepper.component.html
@@ -8,10 +8,10 @@
         <img
           class="stepper__image"
           [src]="'/assets/onboarding/home.webp'"
-          alt=""
+          alt="Dark page with a runic bird as a background. A sidebar to the left as well as a semi-transparent foreground containing the campaign's icon and a feed of recently updated articles of the campaign"
         />
-        <figcaption>
-          Fig 1. Edit Button for metadata in a creature article
+        <figcaption aria-hidden="true">
+          Fig 1. Example campaign home page
         </figcaption>
       </figure>
       <p>
@@ -30,9 +30,9 @@
         <img
           class="stepper__image"
           [src]="'/assets/onboarding/articles_edit.webp'"
-          alt=""
+          alt="The first interactable item on article pages is going to be an edit button for the articles metadata, such as its name"
         />
-        <figcaption>
+        <figcaption aria-hidden="true">
           Fig 2. Edit Button for metadata in a creature article
         </figcaption>
       </figure>
@@ -40,9 +40,9 @@
         <img
           class="stepper__image"
           [src]="'/assets/onboarding/description_edit.webp'"
-          alt=""
+          alt="Separate from the metadata you can update the article's text also known as description. Every description comes with an edit button that will open a text-editor on the same page if you press it."
         />
-        <figcaption>
+        <figcaption aria-hidden="true">
           Fig 3. Edit button for the content of a creature article
         </figcaption>
       </figure>
@@ -50,17 +50,21 @@
         <img
           class="stepper__image"
           [src]="'/assets/onboarding/articles_delete.webp'"
-          alt=""
+          alt="Among the last interactable items on article pages is going to be a delete button. These will always open a modal to ask you if you want to delete the article."
         />
-        <figcaption>Fig 4. Delete button in a creature article</figcaption>
+        <figcaption aria-hidden="true">
+          Fig 4. Delete button in a creature article
+        </figcaption>
       </figure>
       <figure>
         <img
           class="stepper__image"
           src="/assets/onboarding/articles_create.webp"
-          alt=""
+          alt="You can create article on the overview pages that you can reach directly through the sidebar navigation."
         />
-        <figcaption>Fig 5. Create button for creature articles</figcaption>
+        <figcaption aria-hidden="true">
+          Fig 5. Create button for creature articles
+        </figcaption>
       </figure>
       <p>
         You can create short articles about various aspects of your campaign,
@@ -91,7 +95,7 @@
           alt=""
           class="stepper__image"
         />
-        <figcaption>Fig 6. Link to Sessions page</figcaption>
+        <figcaption aria-hidden="true">Fig 6. Link to Sessions page</figcaption>
       </figure>
 
       <p>You can record individual sessions in the Sessions section.</p>
@@ -108,18 +112,22 @@
         <figure class="h-100">
           <img
             src="/assets/onboarding/diaryentry_menu.webp"
-            alt=""
+            alt="The edit button for diaryentry is a menu, as you can either edit the Diaryentry metadata *or* the contents of the Diaryentry."
             class="stepper__image"
           />
-          <figcaption>Fig 7. Diaryentry edit menu</figcaption>
+          <figcaption aria-hidden="true">
+            Fig 7. Diaryentry edit menu
+          </figcaption>
         </figure>
         <figure>
           <img
             src="/assets/onboarding/diaryentry_edit.webp"
-            alt=""
+            alt="Diaryentries are a list of individual encounter that each represent a single scene during the tabletop if they're used as intended. While the diaryentry is in edit mode for encounters, it shows one section of controls to rearrange the order of those encounters and a second displaying the encounters themselves, allowing to edit or delete them. In between each encounter is also an add Encounter button."
             class="stepper__image"
           />
-          <figcaption>Fig 8. Encounter edit view in diaryentries</figcaption>
+          <figcaption aria-hidden="true">
+            Fig 8. Encounter edit view in diaryentries
+          </figcaption>
         </figure>
       </div>
 
@@ -142,15 +150,19 @@
           alt=""
           class="stepper__image"
         />
-        <figcaption>Fig 9. Overview over recordings</figcaption>
+        <figcaption aria-hidden="true">
+          Fig 9. Overview over recordings
+        </figcaption>
       </figure>
       <figure>
         <img
           src="/assets/onboarding/audio_player.webp"
-          alt=""
+          alt="Aldrune generally supports uploading and streaming audio recordings of your sessions, but whether your campaign has access to it depends on your DM and your page's Admin. No support for captions exists at this time."
           class="stepper__image"
         />
-        <figcaption>Fig 10. Playing an audio file</figcaption>
+        <figcaption aria-hidden="true">
+          Fig 10. Playing an audio file
+        </figcaption>
       </figure>
       <p>
         Upload recordings of your tabletop adventures and relive every moment!
@@ -162,8 +174,12 @@
   <cdk-step [label]="'Map your world'">
     <div role="slide" aria-roledescription="slide">
       <figure>
-        <img src="/assets/onboarding/map.webp" alt="" class="stepper__image" />
-        <figcaption>
+        <img
+          src="/assets/onboarding/map.webp"
+          alt="Maps can contain markers that are interactable. At this time, screenreader support is limited."
+          class="stepper__image"
+        />
+        <figcaption aria-hidden="true">
           Fig 11. Campaign map with various marked locations
         </figcaption>
       </figure>
@@ -178,10 +194,10 @@
       <figure>
         <img
           src="/assets/onboarding/configuration.webp"
-          alt=""
+          alt="The config page provides tables for managing meta-entries like map markers and relationship types."
           class="stepper__image"
         />
-        <figcaption>
+        <figcaption aria-hidden="true">
           Fig 12. Campaign configuration with various custom types of
           relationship between articles
         </figcaption>
@@ -196,7 +212,7 @@
       </p>
     </div>
   </cdk-step>
-  @if (isCampaignAdmin() || true) {
+  @if (isCampaignAdmin()) {
     <cdk-step [label]="'Shape your Campaign'">
       <div role="slide" aria-roledescription="slide">
         <figure>
@@ -205,7 +221,7 @@
             alt=""
             class="stepper__image"
           />
-          <figcaption>
+          <figcaption aria-hidden="true">
             Fig 13. Campaign admin page with current settings and configured
             campaign members and their roles
           </figcaption>
@@ -232,17 +248,17 @@
           alt=""
           class="stepper__image"
         />
-        <figcaption>
+        <figcaption aria-hidden="true">
           Fig 14. Hotkey tooltips show up as you hold down "Alt"
         </figcaption>
       </figure>
       <figure>
         <img
           src="/assets/onboarding/hotkey_modal.webp"
-          alt=""
+          alt="Example of a hotkey usage in a list. While in a list, a specific hotkey will perform the action on the item currently in focus, not all items."
           class="stepper__image"
         />
-        <figcaption>
+        <figcaption aria-hidden="true">
           Fig 15. Alt + H shows an overview over hotkey actions
         </figcaption>
       </figure>
