Remove unwanted title

--- a/src/app/design/molecules/icon-card/icon-card.component.html
+++ b/src/app/design/molecules/icon-card/icon-card.component.html
@@ -1,4 +1,4 @@
-<div class="card" [title]="title() | titlecase">
+<div class="card">
   @if (decoration()) {
     <div class="card-decoration">
       {{ decoration() }}
